// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`WalletRegistrations should render empty state 1`] = `
<DocumentFragment>
  <section
    data-testid="WalletRegistrations"
  >
    <div
      class="flex mb-4"
    >
      <h2
        class="mb-0 font-bold"
      >
        Registrations
      </h2>
    </div>
    <div
      class="flex items-center space-x-4"
      data-testid="WalletRegistrations__empty"
    >
      <div
        class="flex items-center -space-x-2"
      >
        <div
          class="sc-bdfBwQ hoQzBh border-theme-neutral-500 dark:border-theme-neutral-700 text-theme-neutral-500 dark:text-theme-neutral-700"
        >
          <div
            class="sc-gsTCUz cXMmJt text-xl"
            height="1em"
            width="1em"
          >
            <svg>
              delegate.svg
            </svg>
          </div>
        </div>
        <div
          class="sc-bdfBwQ hoQzBh border-theme-neutral-500 dark:border-theme-neutral-700"
        />
      </div>
      <div
        class="flex flex-1 justify-between"
      >
        <div
          class="flex flex-col mr-4 font-semibold leading-snug text-theme-text"
        >
          <span
            class="mr-2"
          >
            You have no active registrations
          </span>
          <div
            class="mt-1 mr-auto"
          >
            <a
              class="sc-dlfnbm bGMwsO inline-flex items-center font-semibold transition-colors duration-200 cursor-pointer text-theme-primary hover:text-theme-primary-dark hover:underline active:text-theme-primary-500"
              data-testid="Link"
              rel="noopener noreferrer"
              to="@TODO"
            >
              Learn more
              <div
                class="sc-gsTCUz cXMmJt flex-shrink-0 ml-2 text-sm"
                data-testid="Link__external"
                height="1em"
                width="1em"
              >
                <svg>
                  redirect.svg
                </svg>
              </div>
            </a>
          </div>
        </div>
      </div>
    </div>
  </section>
</DocumentFragment>
`;

exports[`WalletRegistrations should render inactive icons without a delegate registration 1`] = `
<DocumentFragment>
  <section
    data-testid="WalletRegistrations"
  >
    <div
      class="flex mb-4"
    >
      <h2
        class="mb-0 font-bold"
      >
        Registrations
      </h2>
    </div>
    <div
      class="flex items-center h-11"
    >
      <div
        class="flex items-center mr-8 -space-x-2"
      >
        <div
          class="sc-bdfBwQ hoQzBh border-theme-text text-theme-text"
        >
          <div
            class="sc-gsTCUz knmeNJ"
            height="21"
            width="21"
          >
            <svg>
              key.svg
            </svg>
          </div>
        </div>
        <div
          class="sc-bdfBwQ hoQzBh border-theme-text text-theme-text"
        >
          <div
            class="sc-gsTCUz knmeNJ"
            height="21"
            width="21"
          >
            <svg>
              multisig.svg
            </svg>
          </div>
        </div>
      </div>
      <div
        class="flex items-center pl-8 -space-x-2 border-l border-theme-neutral-300 dark:border-theme-neutral-800"
        data-testid="WalletRegistrations__inactive"
      >
        <div
          class="sc-bdfBwQ hoQzBh border-theme-neutral-500 dark:border-theme-neutral-700 text-theme-neutral-500 dark:text-theme-neutral-700"
        >
          <div
            class="sc-gsTCUz knmeNJ"
            height="21"
            width="21"
          >
            <svg>
              delegate.svg
            </svg>
          </div>
        </div>
      </div>
    </div>
  </section>
</DocumentFragment>
`;

exports[`WalletRegistrations should render inactive icons without a multisignature registration 1`] = `
<DocumentFragment>
  <section
    data-testid="WalletRegistrations"
  >
    <div
      class="flex mb-4"
    >
      <h2
        class="mb-0 font-bold"
      >
        Registrations
      </h2>
    </div>
    <div
      class="flex items-center h-11"
    >
      <div
        class="flex items-center mr-8 -space-x-2"
      >
        <div
          class="sc-bdfBwQ hoQzBh border-theme-text text-theme-text"
        >
          <div
            class="sc-gsTCUz knmeNJ"
            height="21"
            width="21"
          >
            <svg>
              key.svg
            </svg>
          </div>
        </div>
        <div
          class="sc-bdfBwQ hoQzBh border-theme-text text-theme-text"
        >
          <div
            class="sc-gsTCUz knmeNJ"
            height="21"
            width="21"
          >
            <svg>
              delegate.svg
            </svg>
          </div>
        </div>
      </div>
      <div
        class="flex items-center pl-8 -space-x-2 border-l border-theme-neutral-300 dark:border-theme-neutral-800"
        data-testid="WalletRegistrations__inactive"
      >
        <div
          class="sc-bdfBwQ hoQzBh border-theme-neutral-500 dark:border-theme-neutral-700 text-theme-neutral-500 dark:text-theme-neutral-700"
        >
          <div
            class="sc-gsTCUz knmeNJ"
            height="21"
            width="21"
          >
            <svg>
              multisig.svg
            </svg>
          </div>
        </div>
      </div>
    </div>
  </section>
</DocumentFragment>
`;

exports[`WalletRegistrations should render inactive icons without a multisignature registration 2`] = `
<DocumentFragment>
  <section
    data-testid="WalletRegistrations"
  >
    <div
      class="flex mb-4"
    >
      <h2
        class="mb-0 font-bold"
      >
        Registrations
      </h2>
    </div>
    <div
      class="flex items-center h-11"
    >
      <div
        class="flex items-center mr-8 -space-x-2"
      >
        <div
          class="sc-bdfBwQ hoQzBh border-theme-text text-theme-text"
        >
          <div
            class="sc-gsTCUz knmeNJ"
            height="21"
            width="21"
          >
            <svg>
              key.svg
            </svg>
          </div>
        </div>
        <div
          class="sc-bdfBwQ hoQzBh border-theme-text text-theme-text"
        >
          <div
            class="sc-gsTCUz knmeNJ"
            height="21"
            width="21"
          >
            <svg>
              delegate.svg
            </svg>
          </div>
        </div>
      </div>
      <div
        class="flex items-center pl-8 -space-x-2 border-l border-theme-neutral-300 dark:border-theme-neutral-800"
        data-testid="WalletRegistrations__inactive"
      >
        <div
          class="sc-bdfBwQ hoQzBh border-theme-neutral-500 dark:border-theme-neutral-700 text-theme-neutral-500 dark:text-theme-neutral-700"
        >
          <div
            class="sc-gsTCUz knmeNJ"
            height="21"
            width="21"
          >
            <svg>
              multisig.svg
            </svg>
          </div>
        </div>
      </div>
    </div>
  </section>
</DocumentFragment>
`;

exports[`WalletRegistrations should render inactive icons without a second signature registration 1`] = `
<DocumentFragment>
  <section
    data-testid="WalletRegistrations"
  >
    <div
      class="flex mb-4"
    >
      <h2
        class="mb-0 font-bold"
      >
        Registrations
      </h2>
    </div>
    <div
      class="flex items-center h-11"
    >
      <div
        class="flex items-center mr-8 -space-x-2"
      >
        <div
          class="sc-bdfBwQ hoQzBh border-theme-text text-theme-text"
        >
          <div
            class="sc-gsTCUz knmeNJ"
            height="21"
            width="21"
          >
            <svg>
              multisig.svg
            </svg>
          </div>
        </div>
        <div
          class="sc-bdfBwQ hoQzBh border-theme-text text-theme-text"
        >
          <div
            class="sc-gsTCUz knmeNJ"
            height="21"
            width="21"
          >
            <svg>
              delegate.svg
            </svg>
          </div>
        </div>
      </div>
      <div
        class="flex items-center pl-8 -space-x-2 border-l border-theme-neutral-300 dark:border-theme-neutral-800"
        data-testid="WalletRegistrations__inactive"
      >
        <div
          class="sc-bdfBwQ hoQzBh border-theme-neutral-500 dark:border-theme-neutral-700 text-theme-neutral-500 dark:text-theme-neutral-700"
        >
          <div
            class="sc-gsTCUz knmeNJ"
            height="21"
            width="21"
          >
            <svg>
              key.svg
            </svg>
          </div>
        </div>
      </div>
    </div>
  </section>
</DocumentFragment>
`;

exports[`WalletRegistrations should render loading state 1`] = `
<DocumentFragment>
  <section
    data-testid="WalletRegistrations"
  >
    <div
      class="flex items-center"
      data-testid="WalletRegistrations__skeleton"
    >
      <div
        class="flex items-center mr-4 -space-x-2"
      >
        <div
          class="sc-bdfBwQ hoQzBh border-transparent"
        >
          <span>
            <span
              class="flex items-center leading-none"
            >
              <span
                class="react-loading-skeleton css-1vmnjpn-skeletonStyles-Skeleton"
                style="width: 44px; height: 44px; border-radius: 50%;"
              >
                ‌
              </span>
              ‌
            </span>
          </span>
        </div>
        <div
          class="sc-bdfBwQ hoQzBh border-transparent"
        >
          <span>
            <span
              class="flex items-center leading-none"
            >
              <span
                class="react-loading-skeleton css-1vmnjpn-skeletonStyles-Skeleton"
                style="width: 44px; height: 44px; border-radius: 50%;"
              >
                ‌
              </span>
              ‌
            </span>
          </span>
        </div>
      </div>
      <div
        class="flex flex-col justify-between h-10"
      >
        <span>
          <span
            class="flex items-center leading-none"
          >
            <span
              class="react-loading-skeleton css-1vmnjpn-skeletonStyles-Skeleton"
              style="width: 150px; height: 14px;"
            >
              ‌
            </span>
            ‌
          </span>
        </span>
        <span>
          <span
            class="flex items-center leading-none"
          >
            <span
              class="react-loading-skeleton css-1vmnjpn-skeletonStyles-Skeleton"
              style="width: 100px; height: 16px;"
            >
              ‌
            </span>
            ‌
          </span>
        </span>
      </div>
      <div
        class="ml-auto"
      >
        <span>
          <span
            class="flex items-center leading-none"
          >
            <span
              class="react-loading-skeleton css-1vmnjpn-skeletonStyles-Skeleton"
              style="width: 100px; height: 44px;"
            >
              ‌
            </span>
            ‌
          </span>
        </span>
      </div>
    </div>
  </section>
</DocumentFragment>
`;

exports[`WalletRegistrations should show delegate icon 1`] = `
<DocumentFragment>
  <section
    data-testid="WalletRegistrations"
  >
    <div
      class="flex mb-4"
    >
      <h2
        class="mb-0 font-bold"
      >
        Registrations
      </h2>
    </div>
    <div
      class="flex items-center h-11"
    >
      <div
        class="flex items-center mr-8 -space-x-2"
      >
        <div
          class="sc-bdfBwQ hoQzBh border-theme-text text-theme-text"
        >
          <div
            class="sc-gsTCUz knmeNJ"
            height="21"
            width="21"
          >
            <svg>
              key.svg
            </svg>
          </div>
        </div>
        <div
          class="sc-bdfBwQ hoQzBh border-theme-text text-theme-text"
        >
          <div
            class="sc-gsTCUz knmeNJ"
            height="21"
            width="21"
          >
            <svg>
              delegate.svg
            </svg>
          </div>
        </div>
      </div>
      <div
        class="flex items-center pl-8 -space-x-2 border-l border-theme-neutral-300 dark:border-theme-neutral-800"
        data-testid="WalletRegistrations__inactive"
      >
        <div
          class="sc-bdfBwQ hoQzBh border-theme-neutral-500 dark:border-theme-neutral-700 text-theme-neutral-500 dark:text-theme-neutral-700"
        >
          <div
            class="sc-gsTCUz knmeNJ"
            height="21"
            width="21"
          >
            <svg>
              multisig.svg
            </svg>
          </div>
        </div>
      </div>
    </div>
  </section>
</DocumentFragment>
`;

exports[`WalletRegistrations should show resigned delegate icon 1`] = `
<DocumentFragment>
  <section
    data-testid="WalletRegistrations"
  >
    <div
      class="flex mb-4"
    >
      <h2
        class="mb-0 font-bold"
      >
        Registrations
      </h2>
    </div>
    <div
      class="flex items-center h-11"
    >
      <div
        class="flex items-center mr-8 -space-x-2"
      >
        <div
          class="sc-bdfBwQ hoQzBh border-theme-text text-theme-text"
        >
          <div
            class="sc-gsTCUz knmeNJ"
            height="21"
            width="21"
          >
            <svg>
              key.svg
            </svg>
          </div>
        </div>
        <div
          class="sc-bdfBwQ hoQzBh border-theme-text text-theme-text"
        >
          <div
            class="sc-gsTCUz knmeNJ"
            height="21"
            width="21"
          >
            <svg>
              delegate-resigned.svg
            </svg>
          </div>
        </div>
      </div>
      <div
        class="flex items-center pl-8 -space-x-2 border-l border-theme-neutral-300 dark:border-theme-neutral-800"
        data-testid="WalletRegistrations__inactive"
      >
        <div
          class="sc-bdfBwQ hoQzBh border-theme-neutral-500 dark:border-theme-neutral-700 text-theme-neutral-500 dark:text-theme-neutral-700"
        >
          <div
            class="sc-gsTCUz knmeNJ"
            height="21"
            width="21"
          >
            <svg>
              multisig.svg
            </svg>
          </div>
        </div>
      </div>
    </div>
  </section>
</DocumentFragment>
`;
